Moved to JDK8 (because heck Maven is annoying)