@@ -64,7 +64,7 @@ public class JsonArray extends JsonElement implements Iterable<JsonElement> {
      *                 values.
      */
     public JsonArray(Collection<JsonElement> elements) {
-        this.list = List.copyOf(elements);
+        this.list = new ArrayList<>(elements);
         this.parseOptions = new ArrayParseOptions();
     }
     /**
@@ -88,7 +88,7 @@ public class JsonArray extends JsonElement implements Iterable<JsonElement> {
      *                stringification methods
      */
     public JsonArray(Collection<JsonElement> elements, ArrayParseOptions options) {
-        this.list = List.copyOf(elements);
+        this.list = new ArrayList<>(elements);
         this.parseOptions = options;
     }
 
@@ -202,7 +202,7 @@ public class JsonArray extends JsonElement implements Iterable<JsonElement> {
      */
     public void add(JsonElement element) {
         this.list.add(element);
-        this.list.addAll(List.of(element.getRootComments()));
+        this.list.addAll(Arrays.asList(element.getRootComments()));
         element.clearRootComment();
         modCount++;
     }
@@ -248,7 +248,7 @@ public class JsonArray extends JsonElement implements Iterable<JsonElement> {
     public void addAll(Collection<JsonElement> elements) {
         this.list.addAll(elements);
         elements.forEach(e -> {
-            list.addAll(List.of(e.getRootComments()));
+            list.addAll(Arrays.asList(e.getRootComments()));
             e.clearRootComment();
         });
         modCount++;
@@ -265,9 +265,9 @@ public class JsonArray extends JsonElement implements Iterable<JsonElement> {
      *         {@code null}
      */
     public void addAll(JsonElement[] elements) {
-        this.addAll(List.of(elements));
+        this.addAll(Arrays.asList(elements));
         for (JsonElement e : elements) {
-            list.addAll(List.of(e.getRootComments()));
+            list.addAll(Arrays.asList(e.getRootComments()));
             e.clearRootComment();
         }
         modCount++;
@@ -456,7 +456,7 @@ public class JsonArray extends JsonElement implements Iterable<JsonElement> {
                 return element;
             } catch (IndexOutOfBoundsException e) {
                 checkForComodification();
-                throw new NoSuchElementException(e);
+                throw new NoSuchElementException(e.toString());
             }
         }
 
